--- a/tanapat.html
+++ b/tanapat.html
@@ -6,6 +6,6 @@
     <title>tanapat</title>
 </head>
 <body> 
-    สิ่งอยากอาจารย์ : ผมจะตั้งใจเรียนครับ ใจดีกับผมด้วย ขอข้อสอบที่ไม่ยาก ขอบคุณครับ<br>
+    สิ่งอยากอาจารย์ : ผมจะตั้งใจเรียนครับใจดีกับผมด้วย ขอข้อสอบที่ไม่ยาก ขอบคุณครับอาจารย์สา<br>
     ชื่อ นายธนภัทร มุ้ยจีน เลขที่ 22 </body>
 </html>
